--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman 
 title: Cesia's BioAnalysis 
-description: This is a template homepage which you can use to host examples of your work. You can think of this as a digital portfolio for yourself.
+description:
