--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman 
 title: Cesia's BioAnalysis 
-description:
+description: Cesia Mendez, Biology Student at Southern New Hampshire University, cesiamendez8@gmail.com
